--- a/sources/HeuristicLab.PluginInfrastructure/Resources.resx
+++ b/sources/HeuristicLab.PluginInfrastructure/Resources.resx
@@ -127,6 +127,9 @@
   <data name="Assembly" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\vs2008imagelibrary_objects_assembly.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Bla" xml:space="preserve">
+    <value />
+  </data>
   <data name="Document" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\VS2008ImageLibrary_Objects_Document.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
