Replaced HeuristicLab logo and made some minor changes in !AboutDialog (#989)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3761 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/Resources.resx
+++ b/sources/HeuristicLab.PluginInfrastructure/Resources.resx
@@ -145,6 +145,12 @@
   <data name="HeuristicLab" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\HeuristicLab.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="HeuristicLabBanner" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\HeuristicLabBanner.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HeuristicLabLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\HeuristicLabLogo.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Install" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\vs2008imagelibrary_objects_install.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -163,11 +169,8 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
-along with HeuristicLab. If not, see http://www.gnu.org/licenses/.</value>
+along with HeuristicLab. If not, see http://www.gnu.org/licenses.</value>
     <comment>Displayed in about dialog</comment>
-  </data>
-  <data name="Logo_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Logo_white.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="NetworkConnections" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\VS2008ImageLibrary_Objects_NetworkConnections.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
